Fix line wrapping in code-blocks

--- a/styl/screen.styl
+++ b/styl/screen.styl
@@ -50,7 +50,8 @@ pre
 	margin-bottom 0.6em
 
 pre code
-	font-size inherit;
+	font-size inherit
+	white-space inherit
 
 code
 	background-color rgb(230, 230, 230)
